welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:39: error: not enough arguments for method faireQuart1: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  faireQuart1()
             ^PatternPicture:42: error: not enough arguments for method faireQuart2: (c: java.awt.Color)Unit.
Unspecified value parameter c.
  faireQuart2()
             ^