welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def trace()
{
  baisseBrosse()
  leveBrosse()
}

def faireQuart1(c:Color)
{
  setCouleurBrosse(c)
  avance()
  gauche()
  trace()
  avance()
  gauche()
  avance()
  trace()
  gauche()
  avance()
  gauche()
}

def faireQuart2(c:Color)
{
  setCouleurBrosse(c)
  trace()
  avance()
  gauche()
  avance()
  trace()
  gauche()
  avance()
  gauche()
  avance()
  gauche()
}

def faireO()
{
  faireQuart1()
  avance()
  avance()
  faireQuart2()
  recule()
  recule()
}

override def run()
{
  faireO()
}